--- a/03_CoverTypes2022_sampling.ipynb
+++ b/03_CoverTypes2022_sampling.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCxnyBHdBtjCeYB+cNfAyX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +22,22 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/francobarrionuevoenv21/ClusteringArroceras_Incendios_SanJavier/blob/main/03_CoverTypes2022_sampling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/blob/main/03_CoverTypes2022_sampling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Librerias"
+        "# NDVI temporal signature (time series) for cover types in Bajo de los Saladillos (2022)"
+      ],
+      "metadata": {
+        "id": "6lSuPP_YRCnA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Import libraries"
       ],
       "metadata": {
         "id": "oiJZ59BpUVzz"
@@ -37,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "2GN8wr3qlQ_D"
       },
@@ -53,45 +61,7 @@
         "\n",
         "# Other libraries\n",
         "from google.colab import files\n",
-        "import matplotlib.lines as mlines\n",
-        "import requests\n",
-        "import zipfile\n",
-        "import io"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Libraries for files loading\n",
-        "\n",
-        "# Code to read csv file into Colaboratory:\n",
-        "from pydrive.auth import GoogleAuth\n",
-        "from pydrive.drive import GoogleDrive\n",
-        "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials\n",
-        "\n",
-        "# Authenticate and create the PyDrive client.\n",
-        "auth.authenticate_user()\n",
-        "gauth = GoogleAuth()\n",
-        "gauth.credentials = GoogleCredentials.get_application_default()\n",
-        "drive = GoogleDrive(gauth)"
-      ],
-      "metadata": {
-        "id": "D9HKaJcblfKn",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0f1ffd50-b39e-4ddf-e48e-38a92eae5922"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:root:pydrive is deprecated and no longer maintained. We recommend that you migrate your projects to pydrive2, the maintained fork of pydrive\n"
-          ]
-        }
+        "import matplotlib.lines as mlines"
       ]
     },
     {
@@ -106,61 +76,210 @@
     {
       "cell_type": "code",
       "source": [
-        "def FileDataDf(dictFiles, i, source):\n",
-        "  ''' This function allows to open csv files stored either in Google Drive or\n",
-        "  from a device. It takes as input a dictionary containing files link or path\n",
-        "  and the index of the element in the dictionary. It also takes a third\n",
-        "  parameter (source) wich specifies the source of the files'''\n",
-        "\n",
-        "  if source == 'gdrive': # Files hosted in Google Drive.\n",
-        "    FilesPath = list(dictFiles.values())[i]\n",
-        "    idPath = FilesPath.split('/', 6)\n",
-        "    downloadedFiles = drive.CreateFile({'id':idPath[5]})\n",
-        "    downloadedFiles.GetContentFile(list(dictFiles.keys())[i])\n",
-        "    dfData = pd.read_csv(list(dictFiles.keys())[i])#, encoding='unicode_escape')\n",
-        "\n",
-        "  elif source == 'other': # Files imported from device or Colab files\n",
-        "    dfData = pd.read_csv(list(dictFiles.values())[i], encoding='unicode_escape')\n",
-        "\n",
-        "  return dfData"
+        "!wget https://raw.githubusercontent.com/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/refs/heads/main/Primary_data/MODIS_TS_byCoverType.csv"
       ],
       "metadata": {
-        "id": "BQZV2qgCLOEL"
+        "id": "alyOaObJLdBd",
+        "outputId": "885c4b62-7026-4ba4-8682-1a2de32ede9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-06-06 03:44:05--  https://raw.githubusercontent.com/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/refs/heads/main/Primary_data/MODIS_TS_byCoverType.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 319925 (312K) [text/plain]\n",
+            "Saving to: ‘MODIS_TS_byCoverType.csv’\n",
+            "\n",
+            "\rMODIS_TS_byCoverTyp   0%[                    ]       0  --.-KB/s               \rMODIS_TS_byCoverTyp 100%[===================>] 312.43K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2025-06-06 03:44:05 (22.5 MB/s) - ‘MODIS_TS_byCoverType.csv’ saved [319925/319925]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# NDVI sampleos PPCC-https://drive.google.com/file/d/1i-9HdWr1l6FLgDPyp7Vf26Iv02BzmlAS/view?usp=sharing\n",
-        "dictFilesPath ={\n",
-        "    \"1.csv\" : \"https://drive.google.com/file/d/1i-9HdWr1l6FLgDPyp7Vf26Iv02BzmlAS/view?usp=sharing\",\n",
-        "    }"
+        "listSamples"
       ],
       "metadata": {
-        "id": "alyOaObJLdBd"
+        "collapsed": true,
+        "id": "XckYELx_WsBg",
+        "outputId": "15b1d8fe-6818-4644-9865-959c597749cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['ArrocerasN1',\n",
+              " 'ArrocerasN2',\n",
+              " 'ArrocerasN3',\n",
+              " 'ArrocerasN4',\n",
+              " 'ArrocerasM1',\n",
+              " 'ArrocerasM2',\n",
+              " 'ArrocerasM3',\n",
+              " 'ArrocerasM4',\n",
+              " 'ArrocerasM5',\n",
+              " 'ArrocerasS1',\n",
+              " 'ArrocerasS2',\n",
+              " 'ArrocerasS3',\n",
+              " 'ArrocerasS4',\n",
+              " 'ArrocerasS5',\n",
+              " 'ArrocerasS6',\n",
+              " 'BosqueN1',\n",
+              " 'BosqueN2',\n",
+              " 'BosqueN3',\n",
+              " 'BosqueN4',\n",
+              " 'BosqueN5',\n",
+              " 'BosqueM1',\n",
+              " 'BosqueM2',\n",
+              " 'BosqueM3',\n",
+              " 'BosqueM4',\n",
+              " 'BosqueM5',\n",
+              " 'BosqueS1',\n",
+              " 'BosqueS2',\n",
+              " 'BosqueS3',\n",
+              " 'BosqueS4',\n",
+              " 'BosqueS5',\n",
+              " 'Estero o bañadosN1',\n",
+              " 'Estero o bañadosN2',\n",
+              " 'Estero o bañadosN3',\n",
+              " 'Estero o bañadosN4',\n",
+              " 'Estero o bañadosN5',\n",
+              " 'Estero o bañadosM1',\n",
+              " 'Estero o bañadosM2',\n",
+              " 'Estero o bañadosM3',\n",
+              " 'Estero o bañadosM4',\n",
+              " 'Estero o bañadosM5',\n",
+              " 'Estero o bañadosS1',\n",
+              " 'Estero o bañadosS2',\n",
+              " 'Estero o bañadosS3',\n",
+              " 'Estero o bañadosS32',\n",
+              " 'Estero o bañadosS4',\n",
+              " 'Estero o bañadosS5',\n",
+              " 'ForestalN1',\n",
+              " 'ForestalN2',\n",
+              " 'ForestalN3',\n",
+              " 'ForestalN4',\n",
+              " 'ForestalN5',\n",
+              " 'ForestalM1',\n",
+              " 'ForestalM2',\n",
+              " 'ForestalM3',\n",
+              " 'ForestalM4',\n",
+              " 'ForestalM5',\n",
+              " 'ForestalS1',\n",
+              " 'ForestalS2',\n",
+              " 'ForestalS3',\n",
+              " 'ForestalS4',\n",
+              " 'ForestalS5',\n",
+              " 'Parcelas A-GN1',\n",
+              " 'Parcelas A-GN2',\n",
+              " 'Parcelas A-GN3',\n",
+              " 'Parcelas A-GN4',\n",
+              " 'Parcelas A-GN42',\n",
+              " 'Parcelas A-GN5',\n",
+              " 'Parcelas A-GN6',\n",
+              " 'Parcelas A-GM1',\n",
+              " 'Parcelas A-GM2',\n",
+              " 'Parcelas A-GM3',\n",
+              " 'Parcelas A-GM4',\n",
+              " 'Parcelas A-GM5',\n",
+              " 'Parcelas A-GM6',\n",
+              " 'Parcelas A-GM7',\n",
+              " 'Parcelas A-GS1',\n",
+              " 'Parcelas A-GS2',\n",
+              " 'Parcelas A-GS3',\n",
+              " 'Parcelas A-GS4',\n",
+              " 'Parcelas A-GS5',\n",
+              " 'PastizalesN1',\n",
+              " 'PastizalesN2',\n",
+              " 'PastizalesN3',\n",
+              " 'PastizalesN4',\n",
+              " 'PastizalesN5',\n",
+              " 'PastizalesN6',\n",
+              " 'PastizalesM1',\n",
+              " 'PastizalesM2',\n",
+              " 'PastizalesM4',\n",
+              " 'PastizalesM5',\n",
+              " 'PastizalesM6',\n",
+              " 'PastizalesM7',\n",
+              " 'PastizalesS1',\n",
+              " 'PastizalesS2',\n",
+              " 'PastizalesS3',\n",
+              " 'PastizalesS4',\n",
+              " 'PastizalesS5',\n",
+              " 'PastizalesS6',\n",
+              " 'SabanasS1',\n",
+              " 'SabanasS2',\n",
+              " 'SabanasS3',\n",
+              " 'SabanasS4',\n",
+              " 'SabanasS5',\n",
+              " 'SabanasS6',\n",
+              " 'SabanasM1',\n",
+              " 'SabanasM2',\n",
+              " 'SabanasM3',\n",
+              " 'SabanasM4',\n",
+              " 'SabanasM5',\n",
+              " 'SabanasN1',\n",
+              " 'SabanasN2',\n",
+              " 'SabanasN3',\n",
+              " 'SabanasN4',\n",
+              " 'SabanasN5']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#listColumns = ['latitude', 'longitude', 'acq_date', 'type']\n",
-        "dfLoaded = FileDataDf(dictFilesPath, 0, source = 'gdrive')#[listColumns] # Select the correct source\n",
-        "\n",
+        "# Load the csv file\n",
+        "dfLoaded = pd.read_csv('/content/MODIS_TS_byCoverType.csv')\n",
         "dfLoaded = dfLoaded.drop(columns=['system:index', '.geo'])\n",
         "\n",
-        "listDates = list(dfLoaded.columns)\n",
-        "listSamples = list(dfLoaded['Cobertura'])\n",
-        "\n",
+        "# Extract the NDVI values\n",
         "matrixNDVISamples = dfLoaded.iloc[:, :-1].to_numpy()\n",
-        "\n",
-        "matrixNDVISamples = matrixNDVISamples*10000\n",
-        "\n",
-        "#-------------------------------------------------------------------------------\n",
-        "\n",
+        "matrixNDVISamples = matrixNDVISamples*10000"
+      ],
+      "metadata": {
+        "id": "939U0qSML19v",
+        "collapsed": true
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get dates and cover types values\n",
+        "listDates = list(dfLoaded.columns)\n",
+        "listSamples = list(dfLoaded['Cobertura'])"
+      ],
+      "metadata": {
+        "id": "CnN_02L3XE3o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dfNDVITransver = pd.DataFrame()\n",
         "\n",
         "i = 0\n",
@@ -179,7 +298,7 @@
         "\n",
         "for s in listSamples:\n",
         "\n",
-        "  if s[-3] == 'S' or s[-3] == 'M' or s[-3] == 'N':\n",
+        "  if s[-3] == 'S' or s[-3] == 'M' or s[-3] == 'N': # S: Sur (South), M: Medio (Middle), N: Norte (North)\n",
         "    listSamplesClean.append(s[:-3])\n",
         "  else:\n",
         "    listSamplesClean.append(s[:-2])\n",
@@ -187,52 +306,10 @@
         "listSamplesClean = list(set(listSamplesClean))"
       ],
       "metadata": {
-        "id": "939U0qSML19v",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "c30024b4-c3ad-43d4-9b26-6a56576021ce"
+        "id": "k53cd4k3XPlX"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver[s] = matrixNDVISamples[i, :]\n",
-            "<ipython-input-5-036598851df2>:23: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-            "  dfNDVITransver['Fecha'] = listDates[:-1]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
