--- a/Code_clustering/04_NDVIplots_firstClustering.ipynb
+++ b/Code_clustering/04_NDVIplots_firstClustering.ipynb
@@ -16,126 +16,73 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "k4SEDaNOIOUA"
       },
       "outputs": [],
       "source": [
-        "# Handling, processing and visualization of data\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
-        "\n",
-        "# Handling and processing of georreferenced data\n",
-        "import geopandas as gpd\n",
-        "\n",
-        "# Other libraries\n",
-        "from google.colab import files\n",
-        "import matplotlib.lines as mlines\n",
-        "import requests\n",
-        "import zipfile\n",
-        "import io"
+        "import geopandas as gpd\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!wget https://raw.githubusercontent.com/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/refs/heads/main/Data_results/01_2_1erkmeans_ndvi_pivot.csv"
+      ],
       "metadata": {
-        "id": "jn9eRuYxEs4Q",
+        "id": "YMs0jiaHHN3o",
+        "outputId": "ad174f04-8811-4688-e4a3-09860e089099",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3c7c37b0-7d0b-44d9-ad04-3554cf93a172"
+        }
       },
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "WARNING:root:pydrive is deprecated and no longer maintained. We recommend that you migrate your projects to pydrive2, the maintained fork of pydrive\n"
+            "--2025-06-08 19:53:26--  https://raw.githubusercontent.com/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/refs/heads/main/Data_results/01_2_1erkmeans_ndvi_pivot.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 18008873 (17M) [text/plain]\n",
+            "Saving to: ‘01_2_1erkmeans_ndvi_pivot.csv’\n",
+            "\n",
+            "\r          01_2_1erk   0%[                    ]       0  --.-KB/s               \r01_2_1erkmeans_ndvi 100%[===================>]  17.17M  --.-KB/s    in 0.05s   \n",
+            "\n",
+            "2025-06-08 19:53:26 (369 MB/s) - ‘01_2_1erkmeans_ndvi_pivot.csv’ saved [18008873/18008873]\n",
+            "\n"
           ]
         }
-      ],
-      "source": [
-        "# Libraries for files loading\n",
-        "\n",
-        "# Code to read csv file into Colaboratory:\n",
-        "from pydrive.auth import GoogleAuth\n",
-        "from pydrive.drive import GoogleDrive\n",
-        "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials\n",
-        "\n",
-        "# Authenticate and create the PyDrive client.\n",
-        "auth.authenticate_user()\n",
-        "gauth = GoogleAuth()\n",
-        "gauth.credentials = GoogleCredentials.get_application_default()\n",
-        "drive = GoogleDrive(gauth)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def FileDataDf(dictFiles, i, source):\n",
-        "  ''' This function allows to open csv files stored either in Google Drive or\n",
-        "  from a device. It takes as input a dictionary containing files link or path\n",
-        "  and the index of the element in the dictionary. It also takes a third\n",
-        "  parameter (source) wich specifies the source of the files'''\n",
-        "\n",
-        "  if source == 'gdrive': # Files hosted in Google Drive.\n",
-        "    FilesPath = list(dictFiles.values())[i]\n",
-        "    idPath = FilesPath.split('/', 6)\n",
-        "    downloadedFiles = drive.CreateFile({'id':idPath[5]})\n",
-        "    downloadedFiles.GetContentFile(list(dictFiles.keys())[i])\n",
-        "    dfData = pd.read_csv(list(dictFiles.keys())[i])#, encoding='unicode_escape')\n",
-        "\n",
-        "  elif source == 'other': # Files imported from device or Colab files\n",
-        "    dfData = pd.read_csv(list(dictFiles.values())[i], encoding='unicode_escape')\n",
-        "\n",
-        "  return dfData"
+        "# Load the csv file\n",
+        "dfLoaded = pd.read_csv('/content/01_2_1erkmeans_ndvi_pivot.csv')"
       ],
       "metadata": {
-        "id": "BQZV2qgCLOEL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# https://drive.google.com/file/d/1DjdQZ00zDujKKYobxVlFi1YbYtb5ZBQX/view?usp=sharing\n",
-        "dictFilesPath ={\n",
-        "    \"1.csv\" : \"https://drive.google.com/file/d/1DjdQZ00zDujKKYobxVlFi1YbYtb5ZBQX/view?usp=sharing\",\n",
-        "    }"
-      ],
-      "metadata": {
-        "id": "alyOaObJLdBd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#listColumns = ['latitude', 'longitude', 'acq_date', 'type']\n",
-        "dfLoaded = FileDataDf(dictFilesPath, 0, source = 'gdrive')#[listColumns] # Select the correct source"
-      ],
-      "metadata": {
-        "id": "939U0qSML19v",
+        "id": "alyOaObJLdBd",
+        "outputId": "5f3f384b-c5e5-4bd9-a94b-78d63408888b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bc7b2dc3-b7c0-47ec-f46e-0df8d74d4b91"
+        }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-3-5faafb0f0655>:12: DtypeWarning: Columns (3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,392,393,394,395,396,397,398,399,400,401,402,403,404,405,406,407,408,409,410,411,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,483,484,485,486,487,488,489,490,491,492,493,494,495,496,497,498,499,500,501,502,503,504,505,506,507,508,509,510,511,512,513,514,515,516,517,518,519,520,521,522,523,524,525,526,527,528) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  dfData = pd.read_csv(list(dictFiles.keys())[i])#, encoding='unicode_escape')\n"
+            "<ipython-input-7-8e25731b9d69>:2: DtypeWarning: Columns (3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,392,393,394,395,396,397,398,399,400,401,402,403,404,405,406,407,408,409,410,411,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,483,484,485,486,487,488,489,490,491,492,493,494,495,496,497,498,499,500,501,502,503,504,505,506,507,508,509,510,511,512,513,514,515,516,517,518,519,520,521,522,523,524,525,526,527,528) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  dfLoaded = pd.read_csv('/content/01_2_1erkmeans_ndvi_pivot.csv')\n"
           ]
         }
       ]
