--- a/03_CoverTypes2022_sampling.ipynb
+++ b/03_CoverTypes2022_sampling.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# NDVI temporal signature (time series) for cover types in Bajo de los Saladillos (2022)"
+        "# NDVI temporal signature (time series) sampling for cover types in Bajo de los Saladillos (2022)"
       ],
       "metadata": {
         "id": "6lSuPP_YRCnA"
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": null,
       "metadata": {
         "id": "2GN8wr3qlQ_D"
       },
@@ -55,8 +55,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import geopandas as gpd\n",
-        "from scipy.stats import norm\n",
-        "from sklearn.mixture import GaussianMixture"
+        "from scipy.stats import norm"
       ]
     },
     {
@@ -71,6 +70,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import data from GH repo\n",
         "!wget https://raw.githubusercontent.com/francobarrionuevoenv21/ClusteringPaddyFields_Fires_SanJavier/refs/heads/main/Primary_data/MODIS_TS_byCoverType.csv"
       ],
       "metadata": {
@@ -80,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "id": "939U0qSML19v",
         "collapsed": true
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "id": "OXgT5XTbCLmF",
         "outputId": "b5d52463-cf60-43cb-eac2-971e42298154"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -703,7 +703,7 @@
       "metadata": {
         "id": "E3kodSWdCOpK"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -716,7 +716,7 @@
       "metadata": {
         "id": "CnN_02L3XE3o"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -739,7 +739,7 @@
         "id": "qqvkG49BBK07",
         "outputId": "c8b657fb-f844-4b8f-b918-47cbd18cebcb"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
         "id": "1Gcn_LsEB-_b",
         "outputId": "28859380-2844-4da7-8b97-73dae4ff644f"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1696,7 +1696,7 @@
         "id": "MvzsCk2YqXFx",
         "outputId": "d0f2fc76-afe2-4b78-e302-9aed0416c5a5"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1742,7 +1742,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
