--- a/Code_clustering/01_1Kmeans_StackNDVI.ipynb
+++ b/Code_clustering/01_1Kmeans_StackNDVI.ipynb
@@ -55,7 +55,7 @@
         "\n",
         "# Authenticate and initialize GEE\n",
         "ee.Authenticate()\n",
-        "ee.Initialize(project='ee-my-francodbarr')"
+        "ee.Initialize(project='ee-my-francodbarr') # NOTE: change according to your GEE project name"
       ]
     },
     {
@@ -518,20 +518,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "cluster_id = 9\n",
-        "np.where(classification == cluster_id)"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "-dcS-_u0FIgH"
-      },
-      "id": "-dcS-_u0FIgH",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Create a dataset with random sampling points of the obtained classification"
@@ -687,6 +673,16 @@
         "# Display the pivoted DataFrame (Optional)\n",
         "#pivot_df"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Export data"
+      ],
+      "metadata": {
+        "id": "t0Xsdgdh4FHe"
+      },
+      "id": "t0Xsdgdh4FHe"
     },
     {
       "cell_type": "code",
